[package]
name = "cblas-src"
version = "0.1.0"
authors = ["Andrey Tkachenko <andreytkachenko64@gmail.com>"]
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = {version = "1.0", features=["parallel"]}
curl = "0.4"
anyhow = "1.0"
flate2 = "1.0"
tar = "0.4"
