[package]
name = "cblas-src"
version = "0.1.1"
authors = ["Andrey Tkachenko <andreytkachenko64@gmail.com>"]
edition = "2018"
build="build.rs"
description="C interface to Legacy BLAS"
license="BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = {version = "1.0", features=["parallel"]}
curl = "0.4"
anyhow = "1.0"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
openblas-src = {version = "0.9.0", features=["system"]}
cblas = "0.2.0"
